# simple-pipeline

./: .gcloudignore  .gitignore  README.md  pyproject.toml
.cloudbuild/: deployment.yaml
.gcloudbuild/: deployment.yaml
components/bq-component/: Dockerfile  component.yaml
components/bq-component/src/: main.py
components/bq-component/src/sql/: sample.sql
components/display-component/: Dockerfile  Makefile  component.yaml  dependencies.txt
components/display-component/src/: main.py
deployment/: build.sh  cloudbuild.sh  deployment_component.sh  deployment_pipeline.yaml  exec.sh
pipeline/: Makefile  dependencies.txt
pipeline/src/: compile_pipeline.py  exec_pipeline.py  simple_pipeline.py
pipeline/src/config/: constants.py
